<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".AIS_Main">

    <RelativeLayout
        android:id="@+id/fixed_content"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/skyblue"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/legend1"
            style="@style/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/legend2"
            style="@style/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="34dp"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/tempView"
            style="@style/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_marginStart="44dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/legend1"
            android:text="25" />

        <TextView
            android:id="@+id/humText"
            style="@style/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/legend2"
            android:text="32" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/controlView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixed_content">

        <TextView
            android:id="@+id/legend3"
            style="@style/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="90dp"
            android:text="@string/humidity_control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_below="@+id/legend3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="102dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="271dp" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="88dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="30dp"
            android:text="-"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legend3" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="88dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="29dp"
            android:text="+"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legend3" />

        <TextView
            android:id="@+id/humCon_Text"
            style="@style/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="48dp"
            android:layout_toStartOf="@+id/plusButton"
            android:text="25"
            app:layout_constraintEnd_toStartOf="@+id/plusButton"
            app:layout_constraintStart_toEndOf="@+id/minusButton"
            app:layout_constraintTop_toBottomOf="@+id/legend3" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/autoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/circle"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlView"
        app:srcCompat="@drawable/gear" />

    <TextView
        android:id="@+id/legend4"
        style="@style/fontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/auto"
        app:layout_constraintStart_toEndOf="@+id/autoButton"
        app:layout_constraintTop_toBottomOf="@+id/controlView" />

    <ImageButton
        android:id="@+id/manualButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/circle"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/legend4"
        app:layout_constraintTop_toBottomOf="@+id/controlView"
        app:srcCompat="@drawable/red_button" />

    <TextView
        android:id="@+id/legend5"
        style="@style/fontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/manual"
        app:layout_constraintStart_toEndOf="@+id/manualButton"
        app:layout_constraintTop_toBottomOf="@+id/controlView" />

    <TextView
        android:id="@+id/legend6"
        style="@style/fontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualButton" />

    <TextView
        android:id="@+id/statusText"
        style="@style/fontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/system_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toEndOf="@+id/legend6"
        app:layout_constraintTop_toBottomOf="@+id/manualButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
